k8s/service-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: service-b
spec:
  selector:
    app: service-b
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
